# barton-outreach-core

./: .ctb-metadata  .editorconfig  .env  .env.example  .env.production  .gitignore  .gitingest  .gitkraken  .gitmodules  ACCOUNT_BASED_AUTH.md  AGENT_FLEET_COMPLETE.md  AGENT_GUIDE.md  AGENT_SUITE_COMPLETE.md  APOLLO_IMPORT_GUIDE.md  APOLLO_INGEST_INTEGRATION.md  BLOG_SCRAPER_REPORT.md  BUILDER_IO_INTEGRATION_COMPLETE.md  CC_LAYER_MAP.md  CC_PURGE_REPORT.md  CC_REFACTOR_VERIFICATION.md  CLAUDE.md  CLAUDE_QUICK_START.md  CODEX_QUICK_START.md  COMPLETE_DEPLOYMENT.md  COMPLIANCE_STATUS.md  COMPOSIO_INTEGRATION.md  COMPOSIO_MIGRATION_CHECKLIST.md  COMPOSIO_STANDARD_INTEGRATION.md  CONSTITUTION.md  CONTRIBUTING.md  CTB_AUDIT_REPORT.md  CTB_FINAL_ACHIEVEMENT_REPORT.md  CTB_INDEX.md  CTB_PHASE3_EXECUTION_SUMMARY.md  CTB_TAGGING_REPORT.md  CTB_VERIFICATION_CHECKLIST.md  CT_ENRICHMENT_RUN_REPORT.md  DATABASE_SCHEMA.md  DEPENDENCIES.md  DEPLOY_NOW.md  (+166 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.githooks/: setup-hooks.bat
.github/: DOCTRINE_PROJECT_TEMPLATE_GUIDE.md  doctrine_project_template.json  pull_request_template.md
.gitingest/: README_INGEST.md  error_handling.md  manifest.json  outreach-doctrine-a2z.md  schema_map.json
.obsidian/: .gitignore  plugins-setup.md
agents/: bus.py  orchestrator.py
analysis/: APIFY_COST_GOVERNANCE.md  APIFY_COST_GOVERNANCE_AUDIT_REPORT.md  APIFY_DISCOVERY_COMPLETE.md  AUDIT_SUMMARY_04_04_07.md  BIT_PLE_PRODUCTION_READINESS_REPORT.md  COMPOSIO_MCP_GLOBAL_POLICY.md  COMPOSIO_MCP_POLICY_APIFY_LIMITS.json  DATABASE_SCHEMA_VISUALIZATION.md  DATA_FLOW_GUIDE.md  ENRICHMENT_DATA_SCHEMA.md  ENRICHMENT_TRIAL_READY.md  EXECUTIVE_SUMMARY_PRODUCTION_READINESS.md  FINAL_COLUMN_COMPLIANCE_REPORT.md  FINAL_PRE_FLIGHT_AUDIT_OUTREACH_CORE.md  FINAL_SCHEMA_COMPLIANCE_REPORT.md  INTELLIGENCE_MIGRATION_GUIDE.md  LEADS_FINDER_GUIDE.md  LINKEDIN_REFRESH_DOCTRINE.md  OUTREACH_CORE_FULL_PROCESS_VERIFICATION.md  PRE_FLIGHT_VALIDATION_REPORT.md  SCHEMA_COMPLIANCE_AUDIT.md  (+22 more)
(+3690 files in other folders)
